Rigify crash when when I press "Generate" #42593

Closed
opened 2014-11-13 23:01:11 +01:00 by Jefferson Rausseo · 8 comments

System Information
Ubuntu 14.04
Nvidia 8600gt

Blender Version
Broken: 2.72 3967d1c (compile with scons)

Short description of error
When I add a sample with Rigify and I press the button "Generate" get the message:

Fetch rig.
Clear rig animation data.
Duplicate rig: 0.023
Make list of org bones: 0.001
Create root bone: 0.001
Violación de segmento (`core' generado)

And crash blender.

Exact steps for others to reproduce the error

  1. Open a new file.
  2. Active the addon Rigify.
  3. Add a Human (Meta-rig) or other sample (finger, spine, etc.)
  4. Press the button "Generate".
  5. Crash.
**System Information** Ubuntu 14.04 Nvidia 8600gt **Blender Version** Broken: 2.72 3967d1c (compile with scons) **Short description of error** When I add a sample with Rigify and I press the button "Generate" get the message: Fetch rig. Clear rig animation data. Duplicate rig: 0.023 Make list of org bones: 0.001 Create root bone: 0.001 Violación de segmento (`core' generado) And crash blender. **Exact steps for others to reproduce the error** 1. Open a new file. 2. Active the addon Rigify. 3. Add a Human (Meta-rig) or other sample (finger, spine, etc.) 4. Press the button "Generate". 5. Crash.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @jefrau

Added subscriber: @jefrau

Added subscriber: @mont29

Added subscriber: @mont29

Confirmed, will have a look.

Confirmed, will have a look.
Bastien Montagne self-assigned this 2014-11-14 09:16:19 +01:00

Dev notes: Gah… already three hours spent on this… Issue is in IDprop. We are facing a corrupted ListBase (two items in list, but listbase->first->next is NULL), which pops out of the blue (meaning, we have hundreds of valid access to that, and suddenly this breaks). So some third party code (i.e. not ListBase one) somehow set that 'next' pointer to NULL, when it should not touch it… :/

Dev notes: Gah… already three hours spent on this… Issue is in IDprop. We are facing a corrupted ListBase (two items in list, but listbase->first->next is NULL), which pops out of the blue (meaning, we have hundreds of valid access to that, and suddenly this breaks). So some third party code (i.e. not ListBase one) somehow set that 'next' pointer to NULL, when it should not touch it… :/

This issue was referenced by blender/blender@6e17fb8fe3

This issue was referenced by blender/blender@6e17fb8fe3d5106cb56dc37aa8f404c699ff44a8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit blender/blender@6e17fb8fe3.

Closed by commit blender/blender@6e17fb8fe3.
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#42593
No description provided.