Fix T42593: Rigify crash when I press "Generate" - corrupted IDGroup's listbase of children

Nothing related to rigify actually, recent hack in py handling of IDProp (rB3346ab03)
was breaking integrity of IDGroup's listbase of children IDProps...

Took me hours to nail this down, should have bisected for once. :/